sugar (0.82.0-1) unstable; urgency=low

  * New upstream release.
  * Update cdbs snippets:
    + Move dependency cleanup to new local snippet package-relations.mk.
    + Update copyright-check output to more closely match proposed new
      copyright file format.  Update copyright-hints.
    + Internal restructuring of flavor-enhanced autotools- and makefile-
      snippets.
    + Update README.cdbs-tweaks.
  * Add DEB_MAINTAINER_MODE in debian/rules (thanks to Romain Beauxis).

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 16 Aug 2008 13:49:57 +0200

sugar (0.81.4-1) unstable; urgency=low

  * New upstream release.
  * Disable (but keep in source) patch 2003 (refactored upstream).
  * Tighten dependency on python-sugar-toolkit (control panel items
    moved).
  * Update local cdbs snippets:
    + Relax copyright-check to only warn about its discoveries.  Closes:
      bug#486984.
    + Update dependency cleanup to strip cdbs 0.4.27 (not 0.4.27-1).
  * Update debian/copyright (new files, same owners and licenses).
    Update debian/copyright-hints.
  * Semi-auto-update debian/control to update build-dependencies:
      DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean

 -- Jonas Smedegaard <dr@jones.dk>  Fri, 20 Jun 2008 23:11:55 +0200

sugar (0.81.2-1) unstable; urgency=low

  * New upstream Release.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 26 May 2008 10:06:47 +0200

sugar (0.81.1-1) unstable; urgency=low

  * New upstream release.
    + Merge activities.default into favorites. Closes: bug#480856.
  * Unfuzz patches.
  * Update debian/copyright and debian/copyright-hints (new owners but
    same licenses).
  * Rewrite debian/copyright to only mention each licensing string once.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 24 May 2008 22:31:14 +0200

sugar (0.79.4-2) unstable; urgency=medium

  * Update cdbs tweaks:
    + Strip any non-printable characters in copyright-check.mk.
  * Update danish l10n.