@@ -1,13 +1,13 @@
 diff --git a/configure b/configure
-index dbc7864..26f52c6 100755
+index 1c17718..7076798 100755
 --- a/configure
 +++ b/configure
 @@ -2641,7 +2641,7 @@ fi
  
  # Setup GETTEXT
  #
--ALL_LINGUAS="am ar ay bn de dz el en es fa fr ha hi ig is it ja ko mk ml ne nl pa pl pt pt_BR qu ro ru rw th ur yo zh_CN zh_TW"
-+ALL_LINGUAS="am ar ay bn da de dz el en es fa fr ha hi ig is it ja ko mk ml ne nl pa pl pt pt_BR qu ro ru rw th ur yo zh_CN zh_TW"
+-ALL_LINGUAS="af am ar ay bg bn bn_IN ca de dz el en es fa fa_AF ff fr gu ha hi ht ig is it ja km ko mk ml mn mr mvo nb ne nl pa pap pis pl ps pt pt_BR qu ro ru rw sd si sl te th tpi tr ur vi yo zh_CN zh_TW"
++ALL_LINGUAS="af am ar ay bg bn bn_IN ca da de dz el en es fa fa_AF ff fr gu ha hi ht ig is it ja km ko mk ml mn mr mvo nb ne nl pa pap pis pl ps pt pt_BR qu ro ru rw sd si sl te th tpi tr ur vi yo zh_CN zh_TW"
  GETTEXT_PACKAGE=sugar
  DEPDIR="${am__leading_dot}deps"
  
